# st7735-embassy

./: Cargo.toml  README.md
examples/: Cargo.toml  README.md  rust-toolchain.toml
examples/.cargo/: config.toml
examples/src/: lib.rs  shared_spi.rs
src/: instruction.rs  lib.rs
